--- a/.github/workflows/performance_profiling.yml
+++ b/.github/workflows/performance_profiling.yml
@@ -13,10 +13,6 @@ jobs:
     name: Internal Memory Usage
     runs-on: ubuntu-latest
 
-    outputs:
-      on_base_branch: ${{ steps.on_base_branch }}
-      on_current_branch: ${{ steps.on_current_branch }}
-
     steps:
       - name: Checkout PR base branch
         uses: actions/checkout@v3
@@ -30,7 +26,7 @@ jobs:
       - name: akhil
         run: |
           echo "::set-output name=on_base_branch::${{ steps.on_base_branch.outputs.abc }}"
-          echo "${{ outputs.on_base_branch }}"
+          echo "${{ steps.on_base_branch.outputs.abc }}"
           
       - name: Checkout the code
         uses: actions/checkout@v3
@@ -41,5 +37,5 @@ jobs:
 
       - name: reddy
         run: |
-          echo "::set-output name=on_current_branch::${{ steps.on_current_branch.outputs.def }}"
-          echo "${{ outputs.on_current_branch }}"
+          echo "::set-output name=on_current_branch::${{ steps.on_current_branch.outputs.abc }}"
+          echo "${{ steps.on_current_branch.outputs.abc }}"
