--- a/.github/workflows/performance_profiling.yml
+++ b/.github/workflows/performance_profiling.yml
@@ -14,19 +14,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout PR base branch
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.base_ref }}
+      # - name: Checkout PR base branch
+      #   uses: actions/checkout@v3
+      #   with:
+      #     ref: ${{ github.base_ref }}
           
-      - name: on base branch
-        id: on_base_branch
-        uses: ./.github/actions/composit
+      # - name: on base branch
+      #   id: on_base_branch
+      #   uses: ./.github/actions/composit
 
-      - name: akhil
-        run: |
-          echo "::set-output name=on_base_branch::${{ steps.on_base_branch.outputs.abc }}"
-          echo "${{ steps.on_base_branch.outputs.abc }}"
+      # - name: akhil
+      #   run: |
+      #     echo "::set-output name=on_base_branch::${{ steps.on_base_branch.outputs.abc }}"
+      #     echo "${{ steps.on_base_branch.outputs.abc }}"
           
       - name: Checkout the code
         uses: actions/checkout@v3
