--- a/.github/actions/composit/action.yml
+++ b/.github/actions/composit/action.yml
@@ -15,7 +15,7 @@ runs:
         distribution: 'zulu'
         cache: 'gradle'
 
-    - name: emulator chalu karo
+    - name: emulator chalu kara
       id: memory_usage
       uses: ReactiveCircus/android-emulator-runner@v2
       with:
@@ -23,10 +23,16 @@ runs:
         target: google_apis
         arch: x86_64
         script: |
+          adb shell
+          ls
+          exit
           before_app_install=$(adb shell df sdcard -h | grep /dev/fuse | awk '{print $3}')
+          echo $before_app_install
           chmod +x gradlew
           ./gradlew installDebug
           after_app_install=$(adb shell df sdcard -h | grep /dev/fuse | awk '{print $3}')
+          echo $after_app_install
           total=$((after_app_install - before_app_install))
+          echo $total
           echo "::set-output name=abc::$total"
           
