--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -21,12 +21,12 @@ jobs:
         with:
           java-version: 17
 
-      - name: Get Old Percentage
-        id: get_old_percentage
-        run: |
-          old_percentage=$(sed -nE 's/.*coverage-([0-9]+\.[0-9]+)\%25.*/\1/p' README.md)
-          echo "old: $old_percentage"
-          echo "OLD=$old_percentage" >> $GITHUB_ENV
+      # - name: Get Old Percentage
+      #   id: get_old_percentage
+      #   run: |
+      #     old_percentage=$(sed -nE 's/.*coverage-([0-9]+\.[0-9]+)\%25.*/\1/p' README.md)
+      #     echo "old: $old_percentage"
+      #     echo "OLD=$old_percentage" >> $GITHUB_ENV
 
       - name: Get new percentage
         id: get_new_percentage
