--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -34,7 +34,7 @@ jobs:
           chmod +x gradlew
           ./gradlew debugCoverage --continue
           files=$(find . -type f -and -path '*/build/reports/jacoco/debugCoverage/html/index.html')
-          files="./group-matching/impl/build/reports/jacoco/debugCoverage/html/index.html ./core/impl/build/reports/jacoco/debugCoverage/html/index.html ./core/api/build/reports/jacoco/debugCoverage/html/index.html ./ads-rendering/impl/build/reports/jacoco/debugCoverage/html/index.html ./attribution/impl/build/reports/jacoco/debugCoverage/html/index.html ./signal-collection/impl/build/reports/jacoco/debugCoverage/html/index.html" 
+          files=("./group-matching/impl/build/reports/jacoco/debugCoverage/html/index.html" "./core/impl/build/reports/jacoco/debugCoverage/html/index.html" "./core/api/build/reports/jacoco/debugCoverage/html/index.html" "./ads-rendering/impl/build/reports/jacoco/debugCoverage/html/index.html" "./attribution/impl/build/reports/jacoco/debugCoverage/html/index.html" "./signal-collection/impl/build/reports/jacoco/debugCoverage/html/index.html") 
           echo "::set-output name=file_paths::$files"
           echo "multi lines"
           echo "$files"
