--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -33,8 +33,7 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew debugCoverage --continue
-          files=$(find . -type f -and -path '*/build/reports/jacoco/debugCoverage/html/index.html')
-          files=("./group-matching/impl/build/reports/jacoco/debugCoverage/html/index.html" "./core/impl/build/reports/jacoco/debugCoverage/html/index.html" "./core/api/build/reports/jacoco/debugCoverage/html/index.html" "./ads-rendering/impl/build/reports/jacoco/debugCoverage/html/index.html" "./attribution/impl/build/reports/jacoco/debugCoverage/html/index.html" "./signal-collection/impl/build/reports/jacoco/debugCoverage/html/index.html") 
+          files=$(find . -type f -and -path '*.txt')
           echo "::set-output name=file_paths::$files"
           echo "multi lines"
           echo "$files"
@@ -44,6 +43,7 @@ jobs:
       - name: Get new percentage
         run: |
           chmod +x ./.github/scripts/code_coverage.py
+          echo "${{ steps.get_new_percentage.outputs.file_paths }}"
           table_string=$(python3 ./.github/scripts/code_coverage.py "${{ steps.get_new_percentage.outputs.file_paths }}" "")
           echo "$table_string"
           IFS=',' read -ra table_list <<< "$table_string"
