--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -34,7 +34,7 @@ jobs:
           chmod +x gradlew
           ./gradlew debugCoverage --continue
           files=$(find . -type f -and -path '*.txt')
-          echo "::set-output name=file_paths::$files"
+          echo "file_paths=$files" >> $GITHUB_ENV
           echo "multi lines"
           echo "$files"
           echo "single line"
@@ -44,7 +44,7 @@ jobs:
         run: |
           chmod +x ./.github/scripts/code_coverage.py
           echo "${{ steps.get_new_percentage.outputs.file_paths }}"
-          table_string=$(python3 ./.github/scripts/code_coverage.py "${{ steps.get_new_percentage.outputs.file_paths }}" "")
+          table_string=$(python3 ./.github/scripts/code_coverage.py "${{ env.file_paths }}" "")
           echo "$table_string"
           IFS=',' read -ra table_list <<< "$table_string"
           length=${#table_list[@]}
