--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -34,7 +34,7 @@ jobs:
           chmod +x gradlew
           ./gradlew debugCoverage --continue
           files=$(find . -type f -and -path '*.txt')
-          echo "file_paths=$files" >> $GITHUB_ENV
+          echo "{file_paths}={"$files"}" >> "$GITHUB_OUTPUT"
           echo "multi lines"
           echo "$files"
           echo "single line"
@@ -43,8 +43,7 @@ jobs:
       - name: Get new percentage
         run: |
           chmod +x ./.github/scripts/code_coverage.py
-          echo "${{ env.file_paths }}"
-          table_string=$(python3 ./.github/scripts/code_coverage.py "${{ env.file_paths }}" "")
+          table_string=$(python3 ./.github/scripts/code_coverage.py "${{ steps.get_new_percentage.outputs.file_paths }}" "")
           echo "$table_string"
           IFS=',' read -ra table_list <<< "$table_string"
           length=${#table_list[@]}
