--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -34,7 +34,7 @@ jobs:
           chmod +x gradlew
           ./gradlew debugCoverage --continue
           files=$(find . -type f -and -path '*.txt') >> $GITHUB_OUTPUT
-          echo "file_paths<<EOF=$files" >> $GITHUB_OUTPUT
+          echo "{file_paths}={files}" >> "$GITHUB_OUTPUT"
           echo "multi lines"
           echo "$files"
           echo "single line"
