--- a/.github/workflows/jacoco.yml
+++ b/.github/workflows/jacoco.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew debugCoverage --continue
-          files=$(find . -type f -and -path '*.txt') >> $GITHUB_OUTPUT
+          files=$(find . -type f -and -path '*.txt')
           echo "{file_paths}={files}" >> "$GITHUB_OUTPUT"
           echo "multi lines"
           echo "$files"
