--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,12 +1,10 @@
 name: Code coverage
 
 on: 
-  push:
+  workflow_dispatch:
     branches:
       - main
-  pull_request:
-    branches:
-      - '*'
+      
 jobs:
   code-coverage:
     name: unit tests coverage
@@ -35,5 +33,5 @@ jobs:
       - name: gen report
         run: |
           chmod +x ./.github/scripts/code_coverage.py
-          table_string=$(python3 ./.github/scripts/code_coverage.py "${{ steps.report-files.outputs.file_paths}}" "")
-          echo "$table_string"
+          table_string=$(python3 ./.github/scripts/code_coverage.py "${{ steps.report-files.outputs.file_paths}}")
+          echo "$table_string" >> $GITHUB_STEP_SUMMARY
