--- a/.github/workflows/performance_profiling.yml
+++ b/.github/workflows/performance_profiling.yml
@@ -33,9 +33,11 @@ jobs:
           target: google_apis
           arch: x86_64
           script: |
-            internal_memory=$(./adb shell df)
-            echo $internal_memory
-            internal_memory2=$(./adb shell df -h | grep /dev/fuse)
-            echo $internal_memory2
+            chmod +x ./.github/scripts/internal.sh
+            ./.github/scripts/internal.sh
+            # internal_memory=$(./adb shell df)
+            # echo $internal_memory
+            # internal_memory2=$(./adb shell df -h | grep /dev/fuse)
+            # echo $internal_memory2
 
       
