--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -140,14 +140,14 @@ jobs:
         if: |
           env.version_change == 'true' ||
           env.VERSION_LINE_CHANGED == 'true'
-        uses: ./.github/actions/new_action
+        uses: ./.github/actions/create_approve_and_merge
         with:
           title: 'custom title'
           commit-message: 'test commit message'
-          pr-creation-app-id: ${{ secrets.ALTERNATE_APP_ID }}
-          pr-creation-app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
-          pr-approval-app-id: ${{ secrets.APP_ID }}
-          pr-approval-app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          create-pr-app-id: ${{ secrets.ALTERNATE_APP_ID }}
+          create-pr-app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.APP_ID }}
+          app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: Approve PR
