--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -117,6 +117,20 @@ jobs:
           sed -i "s/properties#L[0-9]*)/properties#L$current_line\)/" README.md
           cat README.md
 
+      - name: Create, Approve and Merge PR
+        if: |
+          env.version_change == 'true' ||
+          env.VERSION_LINE_CHANGED == 'true'
+        uses: ./.github/actions/create_approve_and_merge
+        with:
+          title: 'custom title'
+          commit-message: 'test commit message'
+          create-pr-app-id: ${{ secrets.ALTERNATE_APP_ID }}
+          create-pr-app-private-key: ${{ secrets.ALTERNATE_APP_PRIVATE_KEY }}
+          app-id: ${{ secrets.APP_ID }}
+          app-private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
       # - name: Create PR
       #   id: create-pr
       #   uses: peter-evans/create-pull-request@v5
