--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -24,9 +24,9 @@ inputs:
     description: 'github token'
     required: true
 
-defaults:
-  run:
-    shell: bash
+# defaults:
+#   run:
+#     shell: bash
 
 runs:
   using: 'composite'
@@ -78,10 +78,10 @@ runs:
       env:
         GITHUB_TOKEN: ${{ steps.my-app-approve.outputs.token }}
 
-    - name: Turn On PR Auto-Merge
-      if: ${{ env.PR_NUMBER }}
-      run: |
-        gh pr merge ${{ env.PR_NUMBER }} --squash --auto --body "${{ inputs.commit-message }}"
-      shell: bash
-      env:
-        GITHUB_TOKEN: ${{ inputs.github-token }}
+    # - name: Turn On PR Auto-Merge
+    #   if: ${{ env.PR_NUMBER }}
+    #   run: |
+    #     gh pr merge ${{ env.PR_NUMBER }} --squash --auto --body "${{ inputs.commit-message }}"
+    #   shell: bash
+    #   env:
+    #     GITHUB_TOKEN: ${{ inputs.github-token }}
