--- a/.github/actions/create_approve_and_merge/action.yml
+++ b/.github/actions/create_approve_and_merge/action.yml
@@ -79,10 +79,10 @@ runs:
       env:
         GITHUB_TOKEN: ${{ steps.my-app-approve.outputs.token }}
 
-    # - name: Turn On PR Auto-Merge
-    #   if: ${{ env.PR_NUMBER }}
-    #   run: |
-    #     gh pr merge ${{ env.PR_NUMBER }} --squash --auto --body "${{ inputs.commit-message }}"
-    #   shell: bash
-    #   env:
-    #     GITHUB_TOKEN: ${{ inputs.github-token }}
+    - name: Turn On PR Auto-Merge
+      if: ${{ env.PR_NUMBER }}
+      run: |
+        gh pr merge ${{ env.PR_NUMBER }} --squash --auto --body "${{ inputs.commit-message }}"
+      shell: bash
+      env:
+        GITHUB_TOKEN: ${{ inputs.github-token }}
