--- a/.github/workflows/performance_profiling.yml
+++ b/.github/workflows/performance_profiling.yml
@@ -22,13 +22,10 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      # - name: Checkout to base branch
-      #   uses: actions/checkout@v4
-      #   with:
-      #     ref: ${{ github.base_ref }}
-      
-      - name: Checkout to head branch
+      - name: Checkout to base branch
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.base_ref }}
 
       - name: Set up Java
         uses: actions/setup-java@v4
@@ -45,27 +42,53 @@ jobs:
           target: google_apis
           arch: x86_64
           script: |
-            chmod +x ./.github/scripts/internal.sh
             chmod +x ./gradlew
             ./gradlew installDebug
-            permanent_internal_memory_usage_of_app_on_base_branch=$(bash ./.github/scripts/internal.sh | awk '{print $1}')
+            
+            user_data_path="/data/data/com.example.breach/"
+            app_path=$(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//')
+
+            user_data=$(adb shell "run-as com.example.breach du $user_data_path" | grep -w $user_data_path | awk '{print $1}')
+
+            app_data=$(adb shell "run-as com.example.breach du $app_path" | grep -w "$app_path" | awk '{print $1}')
+
+            echo "User data = $user_data"
+            echo "App data = $app_data"
+            total_app_usage=$((user_data + app_data))
+            
+            permanent_internal_memory_usage_of_app_on_base_branch=$(( total_app_usage/1024 ))
             echo $permanent_internal_memory_usage_of_app_on_base_branch
             echo "permanent_internal_memory_usage_of_app_on_base_branch=$permanent_internal_memory_usage_of_app_on_base_branch" >> $GITHUB_OUTPUT
 
       - name: Checkout to head branch
         uses: actions/checkout@v4
 
-      - name: Uninstall App
-        run: ./gradlew uninstallDebug
-
-      - name: Fetch app usage on head branch
+      - name: Start emulator, Install application and Calculate memory usage on head branch
         id: permanent_internal_memory_usage_of_app_on_head_branch
-        run: |
-          chmod +x ./.github/scripts/internal.sh
-          ./gradlew installDebug
-          permanent_internal_memory_usage_of_app_on_head_branch=$(bash ./.github/scripts/internal.sh | awk '{print $1}')
-          echo $permanent_internal_memory_usage_of_app_on_head_branch
-          echo "permanent_internal_memory_usage_of_app_on_head_branch=$permanent_internal_memory_usage_of_app_on_head_branch" >> $GITHUB_OUTPUT
+        uses: ReactiveCircus/android-emulator-runner@v2
+        with:
+          api-level: 31
+          target: google_apis
+          arch: x86_64
+          script: |
+            chmod +x ./gradlew
+            ./gradlew installDebug
+            
+            user_data_path="/data/data/com.example.breach/"
+            app_path=$(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//')
+
+            user_data=$(adb shell "run-as com.example.breach du $user_data_path" | grep -w $user_data_path | awk '{print $1}')
+
+            app_data=$(adb shell "run-as com.example.breach du $app_path" | grep -w "$app_path" | awk '{print $1}')
+
+            echo "User data = $user_data"
+            echo "App data = $app_data"
+            total_app_usage=$((user_data + app_data))
+            
+            permanent_internal_memory_usage_of_app_on_head_branch=$(( total_app_usage/1024 ))
+            echo $permanent_internal_memory_usage_of_app_on_head_branch
+            echo "permanent_internal_memory_usage_of_app_on_head_branch=$permanent_internal_memory_usage_of_app_on_head_branch" >> $GITHUB_OUTPUT
+      
 
       - name: Render Permanent Internal Memory Report in workflow summary
         run: |
