--- a/.github/workflows/performance_profiling.yml
+++ b/.github/workflows/performance_profiling.yml
@@ -44,23 +44,20 @@ jobs:
           script: |
             chmod +x ./gradlew
             ./gradlew installDebug
-            
             user_data_path="/data/data/com.example.breach/"
+            paths="$(adb shell pm path com.example.breach)"
+            echo $paths
             paths=$(adb shell pm path com.example.breach)
             echo $paths
             app_path=$(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//')
             echo $app_path
-
             user_data=$(adb shell "run-as com.example.breach du $user_data_path" | grep -w $user_data_path | awk '{print $1}')
             echo $user_data
-
             app_data=$(adb shell "run-as com.example.breach du $app_path" | grep -w "$app_path" | awk '{print $1}')
             echo $app_data
-
             echo "User data = $user_data"
             echo "App data = $app_data"
             total_app_usage=$((user_data + app_data))
-            
             permanent_internal_memory_usage_of_app_on_base_branch=$(( total_app_usage/1024 ))
             echo $permanent_internal_memory_usage_of_app_on_base_branch
             echo "permanent_internal_memory_usage_of_app_on_base_branch=$permanent_internal_memory_usage_of_app_on_base_branch" >> $GITHUB_OUTPUT
