--- a/.github/workflows/performance_profiling.yml
+++ b/.github/workflows/performance_profiling.yml
@@ -52,10 +52,10 @@ jobs:
             app_path=$(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//')
             echo $app_path
             adb shell "run-as com.example.breach du $user_data_path" | grep -w $user_data_path | awk '{print $1}'
-            user_data=$(adb shell "run-as com.example.breach du $user_data_path" | grep -w $user_data_path | awk '{print $1}')
+            user_data=$(adb shell "run-as com.example.breach du /data/data/com.example.breach/" | grep -w /data/data/com.example.breach/ | awk '{print $1}')
             echo $user_data
-            adb shell "run-as com.example.breach du $app_path" | grep -w "$app_path" | awk '{print $1}'
-            app_data=$(adb shell "run-as com.example.breach du $app_path" | grep -w "$app_path" | awk '{print $1}')
+            app_data=$(adb shell "run-as com.example.breach du $(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//')" | grep -w $(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//') | awk '{print $1}')
+            echo $app_data
             echo $app_data
             echo "User data = $user_data"
             echo "App data = $app_data"
@@ -82,10 +82,10 @@ jobs:
             app_path=$(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//')
             echo $app_path
 
-            user_data=$(adb shell "run-as com.example.breach du $user_data_path" | grep -w $user_data_path | awk '{print $1}')
+            user_data=$(adb shell "run-as com.example.breach du /data/data/com.example.breach/" | grep -w /data/data/com.example.breach/ | awk '{print $1}')
             echo $user_data
 
-            app_data=$(adb shell "run-as com.example.breach du $app_path" | grep -w "$app_path" | awk '{print $1}')
+            app_data=$(adb shell "run-as com.example.breach du $(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//')" | grep -w $(adb shell pm path com.example.breach | sed 's/package://' | sed 's/base\.apk$//') | awk '{print $1}')
             echo $app_data
 
             echo "User data = $user_data"
