--- a/.github/workflows/spandan.yml
+++ b/.github/workflows/spandan.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          ref: ${{  github.head_ref }}
+          ref: ${{  github.ref }}
           fetch-depth: 0
 
       - name: Get previous version
